--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,4 +1,3 @@
-
 <script src="//cdn.ckeditor.com/4.5.10/full/ckeditor.js"></script>
 <style>
 
@@ -20,21 +19,29 @@
 
 <h3 class="editor-heading">Here you can create new posts for the blog</h3>
 <div class="editor-container">
-<%= form_for(:post, url: admin_posts_url) do |f| %>
+    
+    
+<%= form_for(:post, url: admin_posts_path) do |f| %>
     <%= f.label  "Post title" %><br>
-    <%= f.text_field :title, :id => 'post-title', class: "post-title" %><br>
-        <!--<script>
+    <%= f.text_area :title, :id => 'post-title', class: "post-title" %><br>
+        <script>
                     CKEDITOR.replace('post-title', {height: '40', width: '100%', toolbar: [
     [ 'Source', '-', 'Bold', 'Italic', 'Underline', 'Font', 'FontSize', 'Styles', 'Format', ]
-], language: 'en'});            //editor.resize( '50px', '50px', true );
-        </script>-->
+], language: 'en'});   
+
+        </script>
+        
     <%= f.label "Post content" %><br>
-    <%= f.text_area :content, :id =>"post-content", class: "post-editor" %>
-            <script> //replaces the default text area with a CKEDITOR text area
+    <%= f.text_area :content, :id =>"post-content", class: "post-editor", :contenteditable => "true" %>
+            <script> 
+
                 CKEDITOR.replace( 'post-content', {language: 'en'} );
+
             </script>
     <%= f.button "Upload image" %>
     <%= f.submit "Submit Post", class: "submit-button" %>
             
 <% end %>
+
+
 </div>
