--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,2 +1,6 @@
-<%= sanitize @post.title, tags: %w(strong em a div p img) %>
-<%= sanitize @post.content, tags: %w(strong em div p img span), attributes: %w(style src Font-family font-weight) %>
+
+<%# clean_title = @post.title.gsub("\"", "") #need to check if string contains \ character, otherwise no cleaning is necessary %>
+<% #clean_content = @post.content.gsub("\"", "") %>
+<%#clean_content %>
+<%= sanitize @post.title, tags: %w(strong em a div p img span style), attributes: %w(style font-style text-decoration color src font-family font-weight height width) %>
+<%= sanitize @post.content, tags: %w(strong em a div p img span style), attributes: %w(style src font-style text-decoration color font-family font-weight height width float) %>
