--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -2,5 +2,16 @@
 <%# clean_title = @post.title.gsub("\"", "") #need to check if string contains \ character, otherwise no cleaning is necessary %>
 <% #clean_content = @post.content.gsub("\"", "") %>
 <%#clean_content %>
+<style>
+.post-display {
+    width: 500px
+}
+</style>
+
+
+<div class="post-display">
 <%= sanitize @post.title, tags: %w(strong em a div p img span style), attributes: %w(style font-style text-decoration color src font-family font-weight height width) %>
-<%= sanitize @post.content, tags: %w(strong em a div p img span style), attributes: %w(style src font-style text-decoration color font-family font-weight height width float) %>
+<%= sanitize @post.content, tags: %w(strong em a div p img span style), attributes: %w(style src font-style text-decoration color font-family font-weight height width float) %>    
+    
+    
+</div>
