--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -2,6 +2,8 @@
 <%= javascript_include_tag 'application'%> 
 <%= csrf_meta_tag %>
 
+<%= render 'admin/users/menu' %>
+
     <% if flash[:danger] %>
     <div class="notice" style="background-color:red;color:white"><%= flash[:danger] %></div>
     <% end %>
@@ -13,7 +15,7 @@
 
 <% if @user.posts.any? %>
 
-    <h3>Your posts</h3>
+    <h3><%= @user.name %>'s posts</h3>
     
         <% @posts.each do |post| %>
             <% clean_post_title = sanitize post.title, tags: %w(strong em a div p img) %>
@@ -23,31 +25,8 @@
         
 <% end %>
 
-<% if Post.count - @user.posts.count > 0 %>
-<h3>Other user's posts</h3>
-
-    <% User.all.each do |user| %>
-        <% if user.id != current_user.id %>
-            <h2><%= user.name %></h2>
-                <% user.posts.each do |post| %>
-                    <% clean_post_title = sanitize post.title, tags: %w(strong em a div p img) %>
-                    <ol class="others-posts"><%= link_to clean_post_title,  admin_post_path(post) %>, <%= link_to "  |  delete this post", admin_post_path(post),
-                    method: 'delete', class: "post-delete", data: {confirm: "Are you sure? This action cannot be undone"} %></ol>
-                <% end %>
-        <% end %>
-    <% end %>
-    
+<% if Post.count - @user.posts.count > 0  && @user == current_user %>
+    <%= render 'admin/users/other_posts' %>
 <% end %>
 
 
-
-<%= button_to "Create new post", new_admin_post_path, method: "get" %><br>
-
-<% if logged_in? && current_user.admin %>
-<%= button_to "Create new user", new_admin_user_path, method: "get" %><br>
-<% end %>
-
-
-
-
-<%= button_to "Log out", admin_logout_path, method: "delete" %>
