--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -18,9 +18,9 @@
     <h3><%= @user.name %>'s posts</h3>
     
         <% @posts.each do |post| %>
-            <% clean_post_title = sanitize post.title, tags: %w(strong em a div p img) %>
-            <ol class="posts"><%= link_to clean_post_title,  admin_post_path(post) %>, <%= link_to "  |  delete this post", admin_post_path(post),
-            method: 'delete', class: "post-delete", data: {confirm: "Are you sure? This action cannot be undone"} %></ol>
+            <% clean_post_title = sanitize post.title, tags: %w(strong em a div img) %>
+            <ol class="posts"><span><%= link_to clean_post_title,  admin_post_path(post) %><%= link_to "  |  delete this post", admin_post_path(post),
+            method: 'delete', class: "post-delete", data: {confirm: "Are you sure? This action cannot be undone"} %></span></ol>
         <% end %>
         
 <% end %>
