--- a/app/views/admin/users/_menu.html.erb
+++ b/app/views/admin/users/_menu.html.erb
@@ -15,16 +15,16 @@
 </style>
 <div class="menu">
 <% if @user.id == current_user.id %>
-<%= button_to "Create new post", new_admin_post_path, method: "get" %><br>
+<%= button_to "Create new post", new_admin_post_path, method: "get", class: "new-post-btn" %><br>
 <% end %>
 
 <% if logged_in? && current_user.admin && @user.id == current_user.id %>
-<%= button_to "Create new user", new_admin_user_path, method: "get" %><br>
-<%= button_to "See all users", admin_users_path, method: "get" %><br>
+<%= button_to "Create new user", new_admin_user_path, method: "get", class: "new-user-btn" %><br>
+<%= button_to "See all users", admin_users_path, method: "get", class: "all-users-btn" %><br>
 <% end %>
 
 
 
 
-<%= button_to "Log out", admin_logout_path, method: "delete" %>
+<%= button_to "Log out", admin_logout_path, method: "delete", class: "logout-btn" %>
 </div>
