--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -7,8 +7,10 @@
     
         <% if user.id != current_user.id %>
             <h2><%= link_to user.name, admin_user_path(user) %>
+            <% if current_user.admin %>
             <%= link_to "Delete this user", admin_user_path(user), method: "delete", 
-            data: {confirm: "Are you sure? This CANNOT be undone and will destroy the user AND his/her posts"} %></h2>
+            data: {confirm: "Are you sure? This CANNOT be undone and will destroy the user AND his/her posts"} %>
+            <% end %></h2>
         <% end %>
         
     <% end %>
