--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -8,7 +8,7 @@
     <div class="notice" style="background-color:red;color:white"><%= flash[:danger] %></div>
     <% end %>
     
-<span class="userName"><h2><%= @user.name %><%= link_to "Edit my profile data", edit_admin_user_path(current_user), method: "get" %></h2></span><br>
+<span class="userName"><h2><%= @user.name %>  |   <%= link_to "Edit my profile data", edit_admin_user_path(current_user), method: "get" %></h2></span><br>
 <span class="userEmail"><%= @user.email %></span><br>
 <span class="creationDate"><%= "created at: #{@user.created_at}"%></span><br>
 <span class="updateDate"><%= "updated at #{@user.updated_at}" %></span><br>
