adds test: non admin can edit his own posts

--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -17,7 +17,7 @@
 </style>
 
 
-<h3 class="editor-heading">Here you can create new posts for the blog</h3>
+<h3 class="editor-heading">Edit your post</h3>
 <div class="editor-container">
     
     
