--- a/app/views/admin/users/_profile_info.html.erb
+++ b/app/views/admin/users/_profile_info.html.erb
@@ -3,7 +3,7 @@
 <span class="userName"><h2>
     <%= @user.name %>
     <% if current_user.id == @user.id %>
-        <%= link_to "Edit my profile data", edit_admin_user_path(current_user), method: "get" %>
+        <%= link_to "Edit my profile data", edit_admin_user_path(current_user), method: "get", class:"profile-edit" %>
     <% end %>
     </h2></span><br>
     
