--- a/app/views/layouts/tabs/_blogTab.html.erb
+++ b/app/views/layouts/tabs/_blogTab.html.erb
@@ -1,15 +1,11 @@
   <div class="content-Tabs" id="blogContents">
     
-    <div class="post-container"><%= render 'admin/posts/post' %></div>
+    <div class="post-container">
+      <%= render 'admin/posts/post' %>
+    </div>
+    
     <div class="post-sidebar">
-      <ol class="post-sidebar-menu">
-        <li>This is a post title</li>    
-        <li>This is a post title</li>   
-        <li>This is a post title</li>   
-        <li>This is a post title</li>   
-        <li>This is a post title</li>   
-        <li>This is a post title</li>   
-      </ol>
+      <%= render 'layouts/tabs/blogTab_sidebar'%>
     </div>
     
   </div>
