--- a/app/assets/stylesheets/style-main.css
+++ b/app/assets/stylesheets/style-main.css
@@ -1084,11 +1084,40 @@ transform: translateY(-50%); /*top + transform combined seem to be the same as t
 }
 
 .post-sidebar-menu {
-  height: auto;
+  height: 85%;
   width: auto;
   margin: auto auto auto 5px;
   display: flex;
   flex-direction: column;
+  font-family: Helvetica, Calibri, sans-serif;
+  font-size: 16px;
+  color: white;
+
+}
+
+.post-sidebar-menu li {
+  height: 12.5%;
+  display:flex;
+
+}
+
+.post-sidebar-menu li:hover {
+
+  background-color: rgb(51,51,51);
+  background-color: rgba(200,200,200, 0.2);
+}
+
+.post-sidebar-menu a {
+
+  text-decoration: none;
+  color:white;
+  height: 100%;
+  width: 100%;
+  display:flex;
+}
+
+.post-sidebar-menu a > span {
+  margin: auto auto auto 5px;
 }
 
 
