--- a/app/views/layouts/tabs/_blogTab_sidebar.html.erb
+++ b/app/views/layouts/tabs/_blogTab_sidebar.html.erb
@@ -1,6 +1,6 @@
       <ol class="post-sidebar-menu">
         <%= Post.find_each.each do |post| %>
             <% clean_post_title = strip_tags(post.title) %>
-            <li><%= link_to content_tag(:span, clean_post_title), "AJAX GOES HERE", class: "post-link #{post.id}" %></li>
+            <li><%= link_to content_tag(:span, clean_post_title), "#{post.id}", class: "post-link #{post.id}", remote: true, method: "get" %></li>
         <% end %>
       </ol>
