creates retrieve_post static controller action

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <li class="navMenu" id="homeTab"><%= link_to content_tag(:span, "Home"), "/home" %></li>
         <li class="navMenu" id="peopleTab"><%= link_to content_tag(:span, "People"), "/people" %></li>
         <li class="navMenu" id="modelsTab"><%= link_to content_tag(:span, "Models"), "/models" %></li>
-        <li class="navMenu" id="urbanTab"><<%= link_to content_tag(:span, "Urban"), "/urban" %></li>
+        <li class="navMenu" id="urbanTab"><%= link_to content_tag(:span, "Urban"), "/urban" %></li>
         <li class="navMenu" id="eventsTab"><%= link_to content_tag(:span, "Events"), "/events" %></li>
         <li class="navMenu" id="contactTab"><%= link_to content_tag(:span, "Contact Us"), "/contact" %></li>
         <li class="navMenu" id="blogTab"><%= link_to content_tag(:span, "Blog"), "/blog" %></li>
