--- a/app/views/layouts/tabs/_blogTab.html.erb
+++ b/app/views/layouts/tabs/_blogTab.html.erb
@@ -1,7 +1,7 @@
   <div class="content-Tabs" id="blogContents">
     
 
-    <div class="post-container">
+    <div class="post-container" id="post-container">
       <%= render 'admin/posts/post' %>
     </div>
     
