--- a/app/assets/stylesheets/style-main.css
+++ b/app/assets/stylesheets/style-main.css
@@ -247,6 +247,7 @@ width: 100%;
 height: 1em;
 justify-content: center;
 margin: auto;
+pointer-events: none;
 
 }
 
@@ -1123,6 +1124,7 @@ transform: translateY(-50%); /*top + transform combined seem to be the same as t
 
 .post-sidebar-menu a > span {
   margin: auto auto auto 5px;
+  pointer-events: none;
 }
 
 
