refactors AJAX requests for tabs

--- a/app/views/layouts/_jumbotron.html.erb
+++ b/app/views/layouts/_jumbotron.html.erb
@@ -1,5 +1,7 @@
 
 
-<% @tab = params[:tab] %>
+<%# @tab = params[:tab] %>
 
-<%= render "layouts/tabs/#{@tab}" %>
+<%#debugger %>
+<%= debug(params) if Rails.env.development? %>
+<%= render "layouts/tabs/#{params[:tab]}" %>
