--- a/app/views/static/show.js.erb
+++ b/app/views/static/show.js.erb
@@ -1,2 +1,2 @@
 
-$("#jumbotron").html("<%= escape_javascript(render('layouts/jumbotron', locals: {params[:tab] => params[:tab]})) %>"); 
+$("#jumbotron").html("<%= escape_javascript(render('layouts/jumbotron')) %>"); 
