--- a/app/views/layouts/tabs/_blogTab_sidebar.html.erb
+++ b/app/views/layouts/tabs/_blogTab_sidebar.html.erb
@@ -1,5 +1,6 @@
       <ol class="post-sidebar-menu">
-        <%= Post.find_each.each do |post| %>
+          <% @posts_asc = Post %>
+        <% @posts_asc.by_date_desc.each do |post| %>
             <% clean_post_title = strip_tags(post.title) %>
             <li><%= link_to content_tag(:span, clean_post_title), "/blog/#{post.id}", class: "post-link #{post.id}" %></li>
         <% end %>
