enhances css for blog tab and orders posts correctly (newest to oldest)

--- a/app/views/layouts/tabs/_blogTab_sidebar.html.erb
+++ b/app/views/layouts/tabs/_blogTab_sidebar.html.erb
@@ -1,3 +1,7 @@
+      <div class="post-sidebar-title">
+          <span>Our posts,</span>
+      </div>
+      
       <ol class="post-sidebar-menu">
           <% @posts_asc = Post %>
         <% @posts_asc.by_date_desc.each do |post| %>
