--- a/app/assets/stylesheets/style-main.css
+++ b/app/assets/stylesheets/style-main.css
@@ -1050,7 +1050,6 @@ transform: translateY(-50%); /*top + transform combined seem to be the same as t
   width: 60%;
   margin: auto;
   display:flex;
-  border-right: 1px solid white;
   overflow: auto;
 }
 
@@ -1081,19 +1080,39 @@ transform: translateY(-50%); /*top + transform combined seem to be the same as t
 
 
 .post-sidebar {
-  height: 100%;
+  height: 95%;
   width: 35%;
   overflow-x: hidden;
   overflow-y: auto;
   display: flex;
+  flex-direction:column;
   margin: auto;
   justify-content: flex-start;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+}
+
+.post-sidebar-title {
+  display: flex;
+  height: 10%;
+  width: 100%;
+  position: relative;
+
+}
+
+.post-sidebar-title > span {
+  height: 100%;
+  font-family: Stalemate;
+  font-size: 3.5em;
+  font-style: italic;
+  margin: auto;  
+  
 }
 
 .post-sidebar-menu {
-  height: 85%;
+  height: 89%;
   width: auto;
-  margin: auto auto auto 5px;
+  margin: auto;
   display: flex;
   flex-direction: column;
   font-family: Helvetica, Calibri, sans-serif;
@@ -1125,30 +1144,11 @@ transform: translateY(-50%); /*top + transform combined seem to be the same as t
 }
 
 .active-post{
-  border-top: 1px solid white;
-  border-bottom: 1px solid white;
+  border: 1px solid white;
+  box-sizing: border-box;
+
 }
 
-.active-post:before {
-    content: "";
-    background: transparent;
-    height: 3.3333vw;/*64px;*/
-    box-sizing: border-box;
-    border-right: 1px white solid;
-    transform-origin: center;
-    transform: rotate(45deg) translateY(50%) translateX(-20.5%);
-}
-
-.active-post:after {
-    content: "";
-    background: transparent;
-    height: 3.3333vw;/*64px;*/
-    box-sizing: border-box;
-    border-right: 1px white solid;
-    transform-origin: center;
-    position:absolute;
-    transform: rotate(45deg) translateY(50%) translateX(-20.5%);
-}
 
 .post-sidebar-menu a > span {
   margin: auto auto auto 5px;
