need to refactor wheel and mousemove to make them compat and DRY up

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -2,9 +2,9 @@
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <%= javascript_include_tag 'application'%>
   <%= javascript_include_tag 'script-main'%> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1., user-scalable=no">
   <link href='https://fonts.googleapis.com/css?family=Stalemate&subset=latin,latin-ext' rel='stylesheet' type='text/css'>	    
-    
+ <script>document.write('<script src="http://' + (location.host || '${1:localhost}').split(':')[0] + ':${2:35729}/livereload.js?snipver=1"></' + 'script>')</script>   
 </head>
 
 <div class="sitewrapper" id="sitewrapper">
