--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -1,47 +1,43 @@
 <script src="//cdn.ckeditor.com/4.5.10/full/ckeditor.js"></script>
-<style>
 
-    .editor-heading {
-        width: 70%;
-        margin: auto;
-        display: flex;
-        justify-content: center;
-    }
-    .editor-container {
-        width: 70%;
-        margin: auto;
-        display: flex;
-        justify-content: center;
-    }
-    
-</style>
+<%= stylesheet_link_tag    'application', media: 'all'%>
+<meta name="viewport" content="width=device-width, initial-scale=1., user-scalable=no">
+<link href='https://fonts.googleapis.com/css?family=Stalemate&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<div class="sitewrapper" id="sitewrapper">  
+    <%= render '/layouts/header' %>
 
+    <div class="jumbotron">
+        <div class="content-Tabs" id="blogContents">
 
-<h3 class="editor-heading">Edit your post</h3>
-<div class="editor-container">
-    
-    
-<%= form_for(@post, url: admin_post_path(@post)) do |f| %>
-    <%= f.label  "Post title" %><br>
-    <%= f.text_area :title, :id => 'post-title', class: "post-title" %><br>
-        <script>
-                    CKEDITOR.replace('post-title', {height: '40', width: '100%', toolbar: [
-    [ 'Source', '-', 'Bold', 'Italic', 'Underline', 'Font', 'FontSize', 'Styles', 'Format', ]
-], language: 'en'});   
-
-        </script>
-        
-    <%= f.label "Post content" %><br>
-    <%= f.text_area :content, :id =>"post-content", class: "post-editor", :contenteditable => "true" %>
-            <script> 
-
-                CKEDITOR.replace( 'post-content', {language: 'en'} );
-
-            </script>
-    <%= f.button "Upload image" %>
-    <%= f.submit "Submit Post", class: "submit-button" %>
+            <div class="post-container" id="post-container">
+                <%= form_for(@post, url: admin_post_path(@post)) do |f| %>
+                <%= f.text_area :title, :id => 'post-title', class: "post-title", :contenteditable => "true" %>
+                    <script>
+                        CKEDITOR.disableAutoInline = true;
+                        CKEDITOR.inline('post-title', {height: '40', width: '100%', toolbar: [
+                        [ 'Source', '-', 'Bold', 'Italic', 'Underline', 'Font', 'FontSize', 'Styles', 'Format', ]
+                        ], language: 'en'});   
+                    </script>
+                <%= f.text_area :content, :id =>"post-content", class: "post-editor", :contenteditable => "true" %>
+                    <script> 
+                        CKEDITOR.disableAutoInline = true;
+                        CKEDITOR.inline( 'post-content' );
+                    </script>
+                <hr>
+                <%= f.button "Upload image" %>
+                <%= f.submit "Submit Post", class: "submit-button" %>
+                        
+                <% end %>  
+            </div>
             
-<% end %>
+            <div class="post-sidebar">
+              <%= render 'layouts/tabs/blogTab_sidebar'%>
+            </div>
+
+        </div>
+    </div>
+    
 
 
+<%= render '/layouts/bottomBar' %>
 </div>
