--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -8,6 +8,10 @@
         margin-left: auto;
         margin-right: auto;
     }
+
+    body {
+        font-family: Calibri, Helvetica, Sans-serif;
+    }
     
 </style>
 <div class="profile-main">
